tests/baselines/reference/override11.errors.txt
override11.ts(6,27): error TS1029: 'public' modifier must precede 'override' modifier.


==== override11.ts (1 errors) ====
    class Base {
        foo = 1;
    }
    
    class Sub extends Base {
        constructor (override public foo: number) {
                              ~~~~~~
!!! error TS1029: 'public' modifier must precede 'override' modifier.
            super();
        }
    }
    